[package]
name = "webcam-seeder"
version = "0.1.0"
edition = "2021"
description = "Seed a random number generator using a webcam picture."
authors = ["Fraol Lemecha","frectonz <fraol0912@gmail.com>"]
license = "MIT"

[dependencies]
rand = "0.8.5"
image = "0.24.7"
itertools = "0.12.0"
clap = { version = "4.4.16", features = ["derive"] }
nokhwa = { git = "https://github.com/l1npengtul/nokhwa", branch = "0.10", features = ["input-v4l", "output-threaded"] }
color-eyre = "0.6.2"
