[package]
name = "webcam-seeder"
version = "0.1.0"
edition = "2021"
description = "Seed a random number generator using a webcam picture."
authors = ["Fraol Lemecha","frectonz <fraol0912@gmail.com>"]
license = "MIT"
homepage = "https://github.com/frectonz/webcam-seeder"

[dependencies]
rsa = "0.9.6"
rand = "0.8.5"
sha2 = "0.10.8"
image = "0.24.7"
color-eyre = "0.6.2"
itertools = "0.12.0"
clap = { version = "4.4.16", features = ["derive"] }
base16ct = { version = "0.2.0", features = ["alloc", "std"] }
nokhwa = { git = "https://github.com/l1npengtul/nokhwa", branch = "0.10", features = ["input-v4l", "output-threaded"] }
